# icpodcast_service

./: Cargo.toml  README.md  canister_ids.json  dfx.json
candid/: manager.did  podcast.did
src/manager/: Cargo.toml
src/manager/src/: ic_wallet.rs  init.rs  lib.rs  manager.rs  metadata.rs  owner.rs
src/manager/src/podcast/: podcast.wasm
src/ndp/: Cargo.toml
src/ndp/src/: dip20.rs  lib.rs  sitedata.rs  siteinfo.rs  staking.rs  types.rs  utils.rs
src/nft/: Cargo.toml
src/podcast/: Cargo.toml
src/podcast/src/: init.rs  lib.rs  owner.rs  podcast.rs  types.rs
