[package]
name = "ndp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-cdk-macros = "0.5"
candid = "0.7.4"
serde = "1.0"
ic-kit = "0.4.4"
ic-cdk = "0.5.0"
num-bigint = "0.4.3"